--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -22,7 +22,7 @@ body {
 
 .container {
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   background-color: #111;
   display: flex;
   flex-direction: column;
