--- a/templates/intercept.html
+++ b/templates/intercept.html
@@ -29,10 +29,7 @@
         </div>
       </nav>
 
-      <div
-        class="header"
-        style="display: flex; flex-direction: column;"
-      >
+      <div class="header" style="display: flex; flex-direction: column">
         <div style="display: flex; align-items: center; gap: 20px">
           <div class="tool_numbers">
             <h1>1</h1>
