--- a/templates/free_ips.html
+++ b/templates/free_ips.html
@@ -64,8 +64,8 @@
           />
           <input
             type="hidden"
-            name="netmask"
-            value="{{ request.args.get('netmask') }}"
+            name="gateway_netmask"
+            value="{{ request.args.get('gateway_netmask') }}"
           />
           <table>
             <thead>
@@ -113,7 +113,7 @@
           event.preventDefault();
           var form = event.target;
           var formData = new FormData(form);
-          
+
           fetch(form.action, {
             method: form.method,
             body: formData,
@@ -122,14 +122,17 @@
             .then((data) => {
               var interface = formData.get("interface");
               var selected_ip = formData.get("selected_ip");
-              var netmask = formData.get("netmask");
+              var gateway_netmask = formData.get("gateway_netmask");
+              var gateway_ip = formData.get("gateway_ip");
               window.location.href =
                 "{{ url_for('main.config_termination') }}?interface=" +
                 interface +
                 "&selected_ip=" +
                 selected_ip +
-                "&netmask=" +
-                netmask;
+                "&gateway_netmask=" +
+                gateway_netmask +
+                "&gateway_ip=" +
+                gateway_ip;
             });
         });
     </script>
