--- a/templates/config_termination.html
+++ b/templates/config_termination.html
@@ -74,6 +74,12 @@
             </tr>
           </tbody>
         </table>
+
+        <form action="{{ url_for('main.network_pentesting') }}">
+          <button class="header_button" type="submit">
+            Network Pentesting
+          </button>
+        </form>
       </div>
     </div>
     <script>
