--- a/templates/sniff.html
+++ b/templates/sniff.html
@@ -1,8 +1,5 @@
-{% extends "base.html" %}
-
-{% block title %}Sniffing Interface{% endblock %}
-
-{% block content %}
+{% extends "base.html" %} {% block title %}Sniffing Interface{% endblock %} {%
+block content %}
 <div class="header" style="display: flex; flex-direction: column; gap: 1rem">
   <div style="display: flex; align-items: center; gap: 20px">
     <div class="tool_numbers">
@@ -12,10 +9,9 @@
   </div>
   <div style="width: 50%">
     <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae
-      nostrum minus neque consequatur provident ipsam impedit ea, suscipit
-      et ipsa. Officia optio dolore deserunt nulla aperiam! Rem aliquam
-      eum obcaecati?
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae nostrum
+      minus neque consequatur provident ipsam impedit ea, suscipit et ipsa.
+      Officia optio dolore deserunt nulla aperiam! Rem aliquam eum obcaecati?
     </p>
   </div>
   <h1 id="loading">Interception loading... please wait</h1>
