--- a/templates/available_ips.html
+++ b/templates/available_ips.html
@@ -32,7 +32,7 @@
       </nav>
 
       <div class="header" style="display: flex; flex-direction: column">
-        <div style="display: flex; align-items: center; gap: 20px">
+        <div class="title-indexed">
           <div class="tool_numbers">
             <h1>3</h1>
           </div>
@@ -40,11 +40,12 @@
         </div>
 
         <div style="width: 50%">
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae
-            nostrum minus neque consequatur provident ipsam impedit ea, suscipit
-            et ipsa. Officia optio dolore deserunt nulla aperiam! Rem aliquam
-            eum obcaecati?
+          <p style="text-align: center;">
+            the tool scans the local network to identify occupied IP addresses.
+            By sending probes to addresses within the network range (gateway netmask), it
+            determines which ones are in use. The results are presented to the
+            user as a list of occupied addresses, providing valuable information
+            for selecting available IP addresses in the next step.
           </p>
         </div>
 
