--- a/templates/free_ips.html
+++ b/templates/free_ips.html
@@ -30,7 +30,7 @@
       </nav>
 
       <div class="header" style="display: flex; flex-direction: column">
-        <div style="display: flex; align-items: center; gap: 20px">
+        <div class="title-indexed">
           <div class="tool_numbers">
             <h1>4</h1>
           </div>
@@ -38,11 +38,12 @@
         </div>
 
         <div style="width: 50%">
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae
-            nostrum minus neque consequatur provident ipsam impedit ea, suscipit
-            et ipsa. Officia optio dolore deserunt nulla aperiam! Rem aliquam
-            eum obcaecati?
+          <p style="text-align: center">
+            the tool calculates available IP addresses based on the netmask of
+            the default gateway and occupied addresses in the LAN. A list of the
+            free (unoccupied) IP addresses is presented to the user, who can
+            select one for their machine. The chosen IP address will be used for
+            subsequent configuration steps.
           </p>
         </div>
 
