--- a/templates/intercept.html
+++ b/templates/intercept.html
@@ -1,17 +1,19 @@
 {% extends "base.html" %} {% block title %}Network Interfaces{% endblock %} {%
 block content %}
 <div class="header" style="display: flex; flex-direction: column">
-  <div style="display: flex; align-items: center; gap: 20px">
+  <div class="title-indexed">
     <div class="tool_numbers">
       <h1>1</h1>
     </div>
     <h1>Network Interfaces</h1>
   </div>
   <div style="width: 50%">
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae nostrum
-      minus neque consequatur provident ipsam impedit ea, suscipit et ipsa.
-      Officia optio dolore deserunt nulla aperiam! Rem aliquam eum obcaecati?
+    <p style="text-align: center">
+      users are provided with a comprehensive list of all available network
+      interfaces, indicating their configuration status. Users can select
+      unconfigured interfaces for further setup. Once an interface is chosen,
+      the tool initiates the configuration process, guiding the user through the
+      necessary steps to assign an IP address and default gateway.
     </p>
   </div>
 
