--- a/templates/config_termination.html
+++ b/templates/config_termination.html
@@ -33,7 +33,7 @@
         class="header"
         style="display: flex; flex-direction: column; gap: 1rem"
       >
-        <div style="display: flex; align-items: center; gap: 20px">
+        <div class="title-indexed">
           <div class="tool_numbers">
             <h1>5</h1>
           </div>
